<resources>
    <string name="MAIN_TITLE" translatable="false">KayPS</string>
    <string name="MAIN_EXPORT_TCX">Export TCX</string>
    <string name="PREF_INSTALL_WATCHFACE_URL" translatable="false">https://github.com/daktak/JayPS-WatchFace/releases</string>
    <string name="app_name" translatable="false">KayPS</string>
    <string name="checking_new_version">Checking for new version…</string>
    <string name="update_already_latest">No update found</string>
    <string name="update_error">Error fetching update</string>
    <string name="app_update_notification_content_title">KayPS update is available!</string>
    <string name="app_update_notification_content_text">Tap to open the releases page</string>
    <string name="action_settings">Settings</string>
    <string name="action_export_gpx">Export GPX</string>
    <string name="action_upload_activity">Upload Activity</string>
    <string name="action_load_route">Load route to follow</string>
    <string name="action_reset">Reset data &amp; GPX</string>
    <string name="action_share_location">Share Location</string>
    <string name="speedfragment_time_label">TIME</string>
    <string name="speedfragment_time_value" translatable="false">00:00</string>
    <string name="speedfragment_distance_label">DISTANCE</string>
    <string name="speedfragment_distance_value" translatable="false">0.0</string>
    <string name="speedfragment_speed_label">SPEED</string>
    <string name="speedfragment_speed_value" translatable="false">0.0</string>
    <string name="speedfragment_avgspeed_label">AVERAGE</string>
    <string name="speedfragment_avgspeed_value" translatable="false">0.0</string>
    <string name="speedfragment_hr_label">HEART RATE</string>
    <string name="speedfragment_hr_value" translatable="false">-</string>
    <string name="speedfragment_power_label">POWER</string>
    <string name="speedfragment_power_value" translatable="false">-</string>
    <string name="speedfragment_cadence_label">CADENCE</string>
    <string name="speedfragment_cadence_value" translatable="false">-</string>
    <string name="startbuttonfragment_start">START</string>
    <string name="startbuttonfragment_stop">STOP</string>
    <string name="altiudefragment_altitude">ALTITUDE</string>
    <string name="altiudefragment_gpsstatus">GPS STATUS</string>
    <string name="altitude_status_disable" translatable="false">-</string>
    <string name="altitude_status_excellent">EXCELLENT</string>
    <string name="altitude_status_good">GOOD</string>
    <string name="altitude_status_medium">MEDIUM</string>
    <string name="altitude_status_poor">POOR</string>
    <string name="PREF_INSTALL_DEFAULT_CATEGORY_TITLE">Default method</string>
    <string name="PREF_INSTALL_OTHERS_CATEGORY_TITLE">Other versions</string>
    <string name="PREF_INSTALL_WATCHFACE_DEEPLINK">Installation from the Pebble Store [default]</string>
    <string name="PREF_INSTALL_WATCHFACE_DEEPLINK_SUMMARY">Please vote for the app</string>
    <string name="PREF_INSTALL_WATCHFACE_DEEPLINK_URL" translatable="false">https://apps.rebble.io/en_US/application/6a8533eb6b779600084ed8e1</string>
    <string name="PREF_INSTALL_WATCHFACE_WEBSITE">Installation from the developers website</string>
    <string name="PREF_INSTALL_WATCHFACE_WEBSITE_SUMMARY" translatable="false" />
    <string name="PREF_INSTALL_SCREEN_SUMMARY">Install the watchapp on your Pebble</string>
    <string name="PREF_RESET_DATA">Reset data &amp; GPX</string>
    <string name="PREF_RESET_DATA_SUMMARY">Distance, time, speed and ascent</string>
    <string name="ALERT_RESET_DATA_TITLE">Reset data and GPX</string>
    <string name="ALERT_RESET_DATA_MESSAGE">Do you really want to reset distance, time, speed, ascent and GPX?</string>
    <string name="PREF_TRACKS_CATEGORY_TITLE">Tracks</string>
    <string name="PREF_ENABLE_TRACKS_TITLE">Enable tracks</string>
    <string name="PREF_ENABLE_TRACKS_SUMMARY">Auto save locations when gps is started</string>
    <string name="PREF_EXPORT_GPX_TITLE">Export as GPX</string>
    <string name="PREF_EXPORT_GPX_SUMMARY" translatable="false" />
    <string name="PREF_EXPORT_TCX_TITLE">Export as TCX</string>
    <string name="PREF_EXPORT_TCX_SUMMARY" translatable="false" />
    <string name="PREF_ADVANCED_GPX_TITLE">Advanced GPX Export</string>
    <string name="PREF_ADVANCED_GPX_SUMMARY">Add ascent, GPS and pressure sensor altitudes</string>
    <string name="PREF_RESET_TRACKS_TITLE">Reset tracks</string>
    <string name="PREF_RESET_TRACKS_SUMMARY">Delete all saved tracks</string>
    <string name="ALERT_RESET_TRACKS_TITLE">Reset Tracks</string>
    <string name="ALERT_RESET_TRACKS_MESSAGE">Do you really want to delete all saved tracks?</string>
    <string name="PREF_OPTIONS_CATEGORY_TITLE">Options</string>
    <string name="PREF_ABOUT_CATEGORY_TITLE">About</string>
    <string name="PREF_AUTOSTART_TITLE">Auto Start</string>
    <string name="PREF_AUTOSTART_SUMMARY">Select this item if you would like KayPS to autostart every time you
        start cycling
    </string>
    <string name="PREF_AUTOSTART_WALKING_SUMMARY">Also include walking/running</string>
    <string name="PREF_UNITS_TITLE">Units</string>
    <string name="PREF_UNITS_DIALOG_TITLE">Units</string>
    <string name="PREF_UNITS_DEFAULT" translatable="false">1</string>
    <string name="PREF_UNITS_UNIT_IMPERIAL">Imperial (miles)</string>
    <string name="PREF_UNITS_UNIT_METRIC">Metric (km/h)</string>
    <string name="PREF_UNITS_UNIT_NAUTICAL_IMPERIAL">Nautical/Imperial (knots + feet)</string>
    <string name="PREF_UNITS_UNIT_NAUTICAL_METRIC">Nautical/Metric (knots + meters)</string>
    <string name="PREF_UNITS_UNIT_RUNNING_IMPERIAL">Running/Imperial (pace: min/mile)</string>
    <string name="PREF_UNITS_UNIT_RUNNING_METRIC">Running/Metric (pace: min/km)</string>
    <string name="REFRESH_INTERVAL_TITLE">GPS Minimum time</string>
    <string name="REFRESH_INTERVAL_DIALOG_TITLE">GPS Minimum time</string>
    <string name="REFRESH_INTERVAL_DEFAULT" translatable="false">103000</string>
    <string name="INDOOR_MODE_TITLE">Indoor mode</string>
    <string name="INDOOR_MODE_SUMMARY">No GPS. Time counts while stationary; speed and distance come from sensors.</string>
    <string name="ORUXMAPS_AUTO_TITLE">Link OruxMaps start</string>
    <string name="ORUXMAPS_AUTO_DIALOG_TITLE">Link OruxMaps start</string>
    <string name="ORUXMAPS_AUTO_DEFAULT" translatable="false">disable</string>
    <string name="PREF_ORUXMAPS">Install OruxMaps</string>
    <string name="PREF_ORUXMAPS_SUMMARY">Install app from Google Play</string>
    <string name="PREF_ORUXMAPS_URL" translatable="false">https://play.google.com/store/apps/details?id=com.orux.oruxmapsDonate</string>
    <string name="PREF_BLE_CATEGORY_TITLE">BLE Heart Rate Monitor (HRM), Cycling Speed and Cadence (CSC), Lights and GoPro</string>
    <string name="PREF_BLE_TITLE">Sensor</string>
    <string name="PREF_BLE_TITLE1">Sensor 1</string>
    <string name="PREF_BLE_TITLE2">Sensor 2</string>
    <string name="PREF_BLE_TITLE3">Sensor 3</string>
    <string name="PREF_BLE_TITLE4">Sensor 4</string>
    <string name="PREF_BLE_TITLE5">Sensor 5</string>
    <string name="PREF_BLE_TITLE6">Sensor 6</string>
    <string name="PREF_BLE_HRM_HRMAX">HRM: Max heart rate</string>
    <string name="PREF_BLE_HRM_HRMAX_SUMMARY">Example: 220 minus your age</string>
    <string name="PREF_BLE_HRM_ZONE_NOTIFICATION_MODE">HRM: Zone alarms</string>
    <string name="PREF_FTP">FTP (Functional Threshold Power)</string>
    <string name="PREF_FTP_SUMMARY">Watts at threshold, e.g. 250</string>
    <string name="PREF_RIDER_HEIGHT">Rider height (cm)</string>
    <string name="PREF_RIDER_HEIGHT_SUMMARY">Used for aerodynamics (CdA) and virtual speed, e.g. 175</string>
    <string name="PREF_RIDER_WEIGHT">Rider weight (kg)</string>
    <string name="PREF_RIDER_WEIGHT_SUMMARY">Used for sim mode and virtual speed calculations, e.g. 75</string>
    <string name="PREF_RIDER_PHYSICS_INFO">Physics model: CdA ~%1$s m², Crr %2$s</string>
    <string name="PREF_RIDER_AGE">Age (years)</string>
    <string name="PREF_RIDER_AGE_SUMMARY">Used for calorie estimation, e.g. 35</string>
    <string name="PREF_BLE_HRM_ZONE_NOTIFICATION_MODE_DEFAULT" translatable="false">0</string>
    <string name="PREF_PEBBLE_HRM_TITLE">Use Pebble heart rate monitor</string>
    <string name="PREF_PEBBLE_HRM_SUMMARY">Use the watch\'s built-in HR sensor instead of a Bluetooth HRM during recording</string>
    <string name="PREF_BLE_CSC_WHEEL_SIZE">CSC: Wheel circumference (mm)</string>
    <string name="PREF_BLE_CSC_WHEEL_SIZE_SUMMARY">Example: 700x23C => 2133mm</string>
    <string name="PREF_BLE_CSC_WHEEL_PRESET_TITLE">CSC: Wheel size preset</string>
    <string name="PREF_ABOUT_TITLE" translatable="false">@string/MAIN_TITLE</string>
    <string name="PREF_ABOUT_SUMMARY" translatable="false"></string>
    <string name="PREF_PEBBLE_STORE">Pebble Store</string>
    <string name="PREF_PEBBLE_STORE_SUMMARY">Please vote for the app</string>
    <string name="PREF_DEBUG_TITLE">Debug</string>
    <string name="PREF_DEBUG_SUMMARY">More logs for developers</string>
    <string name="PREF_STRAVA_CATEGORIE_SUMMARY" translatable="false" />
    <string name="PREF_STRAVA_TITLE">Strava</string>
    <string name="PREF_STRAVA_SESSION_TITLE">Strava session cookie</string>
    <string name="PREF_STRAVA_SESSION_SUMMARY">Paste the value of the _strava4_session cookie from a logged-in Strava session</string>
    <string name="STRAVA_AUTO_TITLE">Automatic upload</string>
    <string name="STRAVA_AUTO_DIALOG_TITLE">Strava automatic upload</string>
    <string name="STRAVA_AUTO_DEFAULT" translatable="false">disable</string>
    <string name="TCX_ACTIVITY_TYPE_TITLE">TCX Activity Type</string>
    <string name="TCX_ACTIVITY_TYPE_DIALOG_TITLE">Type of activity as set in TCX file</string>
    <string name="TCX_ACTIVITY_TYPE_DEFAULT" translatable="false">Biking</string>
    <string name="PREF_LIVE_TRACKING_NEXTCLOUD_CATEGORIE_TITLE">Nextcloud Live Tracking</string>
    <string name="PREF_LIVE_TRACKING_NEXTCLOUD_CATEGORIE_SUMMARY" translatable="false" />
    <string name="PREF_LIVE_TRACKING_NEXTCLOUD_TITLE">Live Tracking with Nextcloud</string>
    <string name="PREF_LIVE_TRACKING_NEXTCLOUD_SUMMARY">PhoneTrack Nextcloud app</string>
    <string name="PREF_LIVE_TRACKING_NEXTCLOUD_URL_TITLE">Nextcloud URL</string>
    <string name="PREF_LIVE_TRACKING_NEXTCLOUD_URL_SUMMARY" translatable="false" />
    <string name="PREF_LIVE_TRACKING_NEXTCLOUD_TOKEN_TITLE">Session Token</string>
    <string name="PREF_LIVE_TRACKING_NEXTCLOUD_TOKEN_SUMMARY" translatable="false" />
    <string name="PREF_LIVE_TRACKING_NEXTCLOUD_DEVICE_TITLE">Device Name</string>
    <string name="PREF_LIVE_TRACKING_NEXTCLOUD_DEVICE_SUMMARY" translatable="false" />
    <string name="PREF_LIVE_TRACKING_NEXTCLOUD_SHARE_TITLE">Share Nextcloud Tracking Link</string>
    <string name="PREF_LIVE_TRACKING_NEXTCLOUD_SHARE_SUMMARY" translatable="false" />
    <string name="PREF_LIVE_TRACKING_MMT_CATEGORIE_TITLE">Map My Tracks Live Tracking</string>
    <string name="PREF_LIVE_TRACKING_MMT_CATEGORIE_SUMMARY" translatable="false" />
    <string name="PREF_LIVE_TRACKING_MMT_TITLE">Live Tracking with Map My Tracks</string>
    <string name="PREF_LIVE_TRACKING_MMT_SUMMARY" translatable="false">http://www.mapmytracks.com</string>
    <string name="PREF_LIVE_TRACKING_MMT_LOGIN_TITLE">Login</string>
    <string name="PREF_LIVE_TRACKING_MMT_LOGIN_SUMMARY" translatable="false" />
    <string name="PREF_LIVE_TRACKING_MMT_PASSWORD_TITLE">Password</string>
    <string name="PREF_LIVE_TRACKING_MMT_PASSWORD_SUMMARY" translatable="false" />
    <string name="PREF_CHANGE_LOG_TITLE">Change Log</string>
    <string name="PREF_CHANGE_LOG_SUMMARY">Displays changes history</string>
    <string name="PREF_EXPORT_EMAIL_TITLE">Export email</string>
    <string name="PREF_EXPORT_EMAIL_SUMMARY">Email address to export your gpx file</string>
</resources>